<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WanAndroid</string>

    <string name="navigation_home">首页</string>
    <string name="search_input_tips">请输入搜索内容</string>
    <string name="navigation_wechat">公众号</string>
    <string name="navigation_system">体系</string>
    <string name="navigation_navigation">导航</string>
    <string name="navigation_project">项目</string>
    <string name="exit_app">再按一次退出程序</string>

    <!--to do-->
    <string name="todo_empty">必填内容不可为空</string>
    <string name="add_todo">添加待办</string>
    <string name="edit_todo">编辑待办</string>
    <string name="todo_work">工作</string>
    <string name="todo_study">学习</string>
    <string name="todo_piority_important">重要</string>
    <string name="todo_piority_normal">非紧急</string>

    <!--mine-->
    <string name="rank">排行榜</string>
    <string name="square">广场</string>
    <string name="mine_collect">我的收藏</string>
    <string name="mine_share">我的分享</string>
    <string name="question">每日一问</string>
    <string name="theme">主题</string>
    <string name="theme_color">主题颜色</string>
    <string name="footprint">足迹</string>
    <string name="long_to_delete">长按删除历史</string>
    <string name="clear_all">清空历史记录？</string>
    <string name="setting">设置</string>
    <string name="mine_about">关于我的</string>
    <string name="rank_rule">积分规则</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="logout">未登录</string>
    <string name="register_tips">没有帐户，快去注册</string>
    <string name="login_tips">已有账户，快去登录</string>
    <string name="project">项目</string>
    <string name="clear_history">清除历史记录</string>
    <string name="mine_todo">待办清单</string>
    <string name="mine_logout">退出登录</string>
    <string name="please_login">请登录</string>
    <string name="accountOrpasswordempty">请输入账号/密码~</string>
    <string name="account">账户</string>
    <string name="password">密码</string>

    <!--setting-->
    <string name="title">温馨提示</string>
    <string name="done">确定</string>
    <string name="cancel">取消</string>
    <string name="setting_about">关于</string>
    <string name="setting_project">开源项目</string>
    <string name="setting_version">检查更新</string>
    <string name="no_version">已经是最新版本啦~</string>
    <string name="new_version">有最新版本可更新：</string>
    <string name="check_update_fail">检查新版本失败</string>
    <string name="down_load_fail">下载安装包失败</string>
    <string name="updating">正在更新</string>
    <string name="setting_exit">退出</string>
    <string name="night_mode">夜间模式</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clear_success">清理成功</string>
    <string name="copyright">版权声明</string>
    <string name="copyright_tip"></string>
    <string name="copyright_summary">仅作个人学习及非商业用途</string>
    <string name="auther">作者</string>
    <string name="auther_name">WjxBless</string>
    <string name="project_address">项目源码</string>
    <string name="csdn博客">个人博客</string>
    <string name="github_url">https://github.com/wangjianxiandev/WanAndroidMvvm</string>
    <string name="open_project">感谢优秀的开源项目</string>
    <string name="open_project_tips">项目中开源库</string>

    <!--menu-->
    <string name="search">搜索</string>
    <string name="scan">扫一扫</string>
    <string name="share">分享</string>
    <string name="qrcode_share">二维码分享</string>
    <string name="open_it_with_system_browser">系统浏览器</string>
    <string name="app_title_url">%1$s 分享的【%2$s】戳此链接查看☞：%3$s</string>
    <string name="qrcode">扫一扫二维码，可分享文章</string>

    <!--shortcuts-->
    <string name="shortcut_search" tools:ignore="ExtraTranslation">搜一搜</string>
    <string name="shortcut_wenda" tools:ignore="ExtraTranslation">每日一问</string>

    <!--feed back-->
    <string name="error_message">发生了一些错误</string>
    <string name="empty_message">没有数据哎~</string>
</resources>
