<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.PreferenceCategory
        android:key="base"
        android:title="基本设置">
        <SwitchPreference
            android:key="night"
            android:summaryOn="切换日间模式"
            android:summaryOff="切换夜间模式"
            android:defaultValue="false"
            android:title="@string/night_mode"/>
        <Preference
            android:key="clearCache"
            android:title="@string/clear_cache" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:key="about"
        android:title="@string/setting_about">

        <Preference
            android:key="version"
            android:title="@string/setting_version"
            android:summary="1.0.0"/>

        <Preference
            android:key="author"
            android:summary="@string/auther_name"
            android:title="@string/auther" />

        <Preference
            android:key="csdn"
            android:summary="DLUT_WJX"
            android:title="@string/csdn博客"/>

        <Preference
            android:key="project"
            android:summary="@string/github_url"
            android:title="@string/project_address" />

        <Preference
            android:key="copyRight"
            android:summary="@string/copyright_summary"
            android:title="@string/copyright" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen >