<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--侧滑菜单-->
    <item android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/nav_menu_collect"
                android:icon="@drawable/ic_collect"
                android:title="@string/mine_collect" />

            <item
                android:id="@+id/nav_menu_todo"
                android:icon="@drawable/ic_todo"
                android:title="@string/mine_todo" />

            <item
                android:id="@+id/nav_menu_about"
                android:icon="@drawable/ic_about"
                android:title="@string/mine_about" />

            <item
                android:id="@+id/nav_menu_setting"
                android:icon="@drawable/ic_setting"
                android:title="@string/setting" />

            <item
                android:id="@+id/nav_menu_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/mine_logout" />
        </menu>
    </item>
</menu>