<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:checked="true"
        android:icon="@drawable/navigation_home"
        android:title="@string/navigation_home" />

    <item
        android:id="@+id/menu_system"
        android:icon="@drawable/navigation_system"
        android:title="@string/navigation_system" />
    <item
        android:id="@+id/menu_wechat"
        android:icon="@drawable/navigation_wechat"
        android:title="@string/navigation_wechat" />
    <item
        android:id="@+id/menu_navigation"
        android:icon="@drawable/navigation_navigation"
        android:title="@string/navigation_navigation" />

    <item
        android:id="@+id/menu_project"
        android:icon="@drawable/navigation_project"
        android:title="@string/navigation_project" />
</menu>