<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/iv_login_bg"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/ic_login_bg"
        android:contentDescription="@string/app_name"
        tools:ignore="MissingConstraints" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/app_name"
        android:elevation="5dp"
        android:src="@drawable/ic_logo"
        app:civ_border_color="@color/white"
        app:civ_border_width="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_login_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/account"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/iv_login_bg">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mTieAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/password"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/ti_account">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mTiePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/mBtnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/btn_bg"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/ti_password" />

    <TextView
        android:id="@+id/mTvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/register_tips"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mBtnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>
