<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/search_back"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:paddingStart="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_10"
        android:src="@drawable/ic_back" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginEnd="@dimen/dp_10"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <EditText
            android:id="@+id/search_input"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/search_edit_background"
            android:hint="@string/search_input_tips"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:textColor="@color/black"
            android:paddingStart="12dp"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/search_close"
            android:layout_width="36dp"
            android:layout_height="16dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:src="@drawable/ic_close" />
    </RelativeLayout>

    <TextView
        android:id="@+id/search_button"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:layout_marginEnd="@dimen/dp_10"
        android:text="@string/search"
        android:background="@drawable/text_selector"
        android:clickable="true"
        android:textSize="14sp"
        android:textColor="@color/black" />
</LinearLayout>