<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog"
    android:padding="@dimen/safe_dialog_padding"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/qrcode_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/safe_dialog_padding"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pop_qrcode_image"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_qrcode" />

        <TextView
            android:id="@+id/pop_qrcode_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/safe_padding"
            android:text="@string/qrcode_share"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/textTipColor"
        android:orientation="vertical"/>

    <LinearLayout
        android:id="@+id/share_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/safe_dialog_padding"
        android:layout_marginBottom="@dimen/safe_dialog_padding"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pop_share_image"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_article_share" />

        <TextView
            android:id="@+id/pop_share_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/safe_dialog_padding"
            android:text="@string/share"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/textTipColor"
        android:orientation="vertical"/>

    <LinearLayout
        android:id="@+id/browser_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/safe_padding"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pop_browser_image"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_browser" />

        <TextView
            android:id="@+id/pop_browser_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/safe_padding"
            android:text="@string/open_it_with_system_browser"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </LinearLayout>
</LinearLayout>