<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivBack"
        android:layout_marginTop="10dp"
        android:text="注册账号"
        android:textColor="@color/always_white_text"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBack" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/account_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@color/transparent"
        android:enabled="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/account"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/account_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="4dp"
        android:text="填写账号"
        android:textColor="@color/white_85"
        android:textSize="10dp"
        app:layout_constraintStart_toStartOf="@id/account_text"
        app:layout_constraintTop_toBottomOf="@id/account_text" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/transparent"
        android:enabled="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/account_tip"
        app:passwordToggleEnabled="true" />

    <TextView
        android:id="@+id/password_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="4dp"
        android:text="填写密码"
        android:textColor="@color/white_85"
        android:textSize="10dp"
        app:layout_constraintStart_toStartOf="@id/password_text"
        app:layout_constraintTop_toBottomOf="@id/password_text" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/repassword_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/transparent"
        android:enabled="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/password_tip"
        app:passwordToggleEnabled="true" />

    <TextView
        android:id="@+id/repassword_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="4dp"
        android:text="确认密码"
        android:textColor="@color/white_85"
        android:textSize="10dp"
        app:layout_constraintStart_toStartOf="@id/repassword_text"
        app:layout_constraintTop_toBottomOf="@id/repassword_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="45dp"
        android:text="@string/register"
        android:textColor="@color/colorAccent"
        android:textSize="13dp"
        android:textStyle="bold"
        app:backgroundTint="@color/white"
        app:backgroundTintMode="src_in"
        app:cornerRadius="15dp"
        app:layout_constraintTop_toBottomOf="@+id/repassword_tip"
        tools:layout_editor_absoluteX="103dp" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login_tips"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_register" />

</androidx.constraintlayout.widget.ConstraintLayout>
